# moe-lrc

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
case/json/: cases.jsonl
config/: data.jsonl  global.json  model.jsonl
data/: README.md  config.jsonl
model/: README.md  config.jsonl
model/deepseek/: config.json  modeling_deepseek.py
model/deepseek2/: config.json  modeling_deepseek.py
model/grin/: config.json  device_map.json  modeling_grinmoe.py
model/jamba/: config.json  modeling_jamba.py
model/jetmoe/: config.json  modeling_jetmoe.py
model/jetmoechat/: config.json  modeling_jetmoe.py
model/jetmoesft/: config.json  modeling_jetmoe.py
model/llamamoe/: config.json  modeling_llama_moe_hf.py
model/llamamoe2/: config.json  modeling_mixtral.py
model/llamamoe2s/: config.json  modeling_mixtral.py
src/: 00_convert.py  01_tokenize.py  02_merge.py  10_calculate.py  11_merge.py  12_rank.py  13_refine.py  20_vocab_calc.py  21_vocab_calcgen.py  22_vocab_refine.py  30_srp_calc.py  31_srp_refine.py  32_srp_merge.py  33_srp_plot.ipynb  34_srp_domain.ipynb  35_srp_spec.ipynb  40_sch_calc.py  41_sch_calc.py  41_sch_refine.py  42_sch_refine.py  43_sch_merge.py  43_sch_plot.ipynb  44_sch_plot.ipynb  50_chr_calc.py  50_topk.py  51_chr_calc.py  51_chr_refine.py  52_chr_merge.py  52_chr_refine.py  53_chr_merge.py  53_chr_plot.ipynb  54_chr_plot.ipynb  A0_case_calculate.py  A1_case_merge.py  A1_cases_merge.py  A2_case_refine.py  A3_case_plot.ipynb  A3_cases_plot.ipynb  B0_post.ipynb  C0_srp_pos_calc.py  (+9 more)
toy_model/: README.md  config.jsonl
(+56 files in other folders)
